--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "better-scroll": "^1.15.2",
     "core-js": "^3.6.4",
     "fastclick": "^1.0.6",
+    "sass": "^1.26.5",
+    "sass-loader": "^8.0.2",
     "vue": "^2.6.11",
     "vue-lazyload": "^1.3.3",
     "vue-router": "^3.1.6"
